[package]
name = "client"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
anytls = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
rustls = { path = "../rustls", features = ["log"] }
rustls-aws-lc-rs = { path = "../rustls-aws-lc-rs" }
rustls-util = { path = "../rustls-util" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
socks5-impl = { workspace = true, features = ["server"] }
tokio = { workspace = true, features = [
    "io-std",
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "time",
] }
toml = { workspace = true }
webpki-roots = { workspace = true }

[lints]
workspace = true
