[package]
name = "server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
rustls = { path = "../rustls", features = ["log"] }
rustls-aws-lc-rs = { path = "../rustls-aws-lc-rs" }
rustls-util = { path = "../rustls-util" }
serde = { workspace = true }
serde_json = { workspace = true }
socks5-impl = { workspace = true }
tokio = { workspace = true, features = ["io-util", "rt-multi-thread", "sync", "time"] }
toml = { workspace = true }

[lints]
workspace = true
